# cardinal-court-voice-receptionist

./: .gitignore  AGENTS.md  Dockerfile  README.md  livekit.toml  pyproject.toml
.agents/skills/livekit-agents/: SKILL.md
.github/workflows/: ruff.yml  tag-version.yml  template-check.yml  tests.yml
docs/: index.html
src/: agent.py
tests/: test_agent.py
web/: index.html
